--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,16 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: carecircle
-      POSTGRES_PASSWORD: carecircle_dev
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1234
       POSTGRES_DB: carecircle
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U carecircle"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -30,40 +28,18 @@ services:
       timeout: 5s
       retries: 5
 
-  minio:
-    image: minio/minio
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: carecircle
-      MINIO_ROOT_PASSWORD: carecircle_dev
-    command: server /data --console-address ":9001"
-    volumes:
-      - minio_data:/data
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-
-  mailpit:
-    image: axllent/mailpit
-    ports:
-      - "1025:1025"
-      - "8025:8025"
-
   rabbitmq:
     image: rabbitmq:3.12-management-alpine
     ports:
       - "5672:5672"     # AMQP protocol
-      - "15672:15672"   # Management UI
+      - "15672:15672"   # Management UI - http://localhost:15672 (guest/guest)
+      - "1883:1883"     # MQTT protocol
     environment:
-      RABBITMQ_DEFAULT_USER: carecircle
-      RABBITMQ_DEFAULT_PASS: carecircle_dev
-      RABBITMQ_DEFAULT_VHOST: carecircle
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+      - ./rabbitmq-plugins.conf:/etc/rabbitmq/enabled_plugins:ro
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
       interval: 10s
@@ -73,6 +49,5 @@ services:
 volumes:
   postgres_data:
   redis_data:
-  minio_data:
   rabbitmq_data:
 
