feat: Implement chat functionality with Stream Chat integration
- Added ChatContainer component for managing chat channels and messages.
- Created FamilyChat component to handle family-specific chat interactions.
- Introduced useChat hook for managing chat client connection and channel retrieval.
- Developed notification settings component with push notification management.
- Implemented service worker provider for PWA support and push notifications.
- Added hooks for managing notifications and push subscriptions.
- Configured API endpoints for notifications and push subscriptions.
- Set up Nginx configuration for production deployment with SSL and load balancing.

--- a/.env.example
+++ b/.env.example
@@ -97,6 +97,14 @@ VAPID_PRIVATE_KEY=
 VAPID_SUBJECT=mailto:admin@carecircle.com
 
 # ============================================
+# STREAM CHAT (Optional - for family messaging)
+# ============================================
+# Sign up at https://getstream.io/ (Free: 5M API calls/month)
+# Get keys from Stream Dashboard > App Settings
+NEXT_PUBLIC_STREAM_API_KEY=
+STREAM_API_SECRET=
+
+# ============================================
 # SMS NOTIFICATIONS (Optional - for emergency alerts)
 # ============================================
 # Option 1: Twilio
