--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -39,11 +39,13 @@
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^5.10.0",
+    "@types/compression": "^1.8.1",
     "argon2": "^0.31.2",
     "bull": "^4.12.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -61,6 +63,7 @@
     "rrule": "^2.8.1",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
+    "stream-chat": "^9.28.0",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^9.0.1",
