--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "nest build",
     "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
-    "dev": "nest start --watch",
+    "dev": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-clean.ps1",
+    "dev:unsafe": "nest start --watch",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
