--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev -p 4173",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start -p 4173",
     "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -41,6 +44,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
