--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "build": "nest build",
     "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
-    "dev": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-clean.ps1",
-    "dev:unsafe": "nest start --watch",
+    "dev": "nodemon",
+    "dev:nest": "nest start --watch",
+    "dev:clean": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-clean.ps1",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nodemon",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -89,8 +90,10 @@
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
