--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -9,68 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
+      "src": "/icons/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     }
   ],
-  "screenshots": [
-    {
-      "src": "/screenshots/dashboard.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "label": "Dashboard view"
-    },
-    {
-      "src": "/screenshots/medications.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "label": "Medications tracking"
-    }
-  ],
+  "screenshots": [],
   "categories": ["health", "medical", "lifestyle"],
   "prefer_related_applications": false,
   "related_applications": [],
@@ -80,21 +25,21 @@
       "short_name": "Meds",
       "description": "View medication schedule",
       "url": "/medications",
-      "icons": [{ "src": "/icons/meds-96x96.png", "sizes": "96x96" }]
+      "icons": [{ "src": "/icons/icon.svg", "sizes": "any", "type": "image/svg+xml" }]
     },
     {
       "name": "Emergency",
       "short_name": "SOS",
       "description": "Emergency contacts and info",
       "url": "/emergency",
-      "icons": [{ "src": "/icons/emergency-96x96.png", "sizes": "96x96" }]
+      "icons": [{ "src": "/icons/icon.svg", "sizes": "any", "type": "image/svg+xml" }]
     },
     {
       "name": "Calendar",
       "short_name": "Calendar",
       "description": "View appointments",
       "url": "/calendar",
-      "icons": [{ "src": "/icons/calendar-96x96.png", "sizes": "96x96" }]
+      "icons": [{ "src": "/icons/icon.svg", "sizes": "any", "type": "image/svg+xml" }]
     }
   ],
   "share_target": {
