feat: update dependencies and improve nodemon configuration
- Added `kill-port` dependency to ensure port 4000 is free before starting the server.
- Updated `nodemon` configuration to include `kill-port` in the execution command.
- Enhanced user registration and email verification logic to include family memberships in responses.
- Improved logging for email-related operations in development mode.
- Added new dependencies and updated existing ones in `pnpm-lock.yaml` for better compatibility.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "build": "nest build",
     "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
+    "predev": "npx kill-port 4000 || echo Port 4000 was free",
     "dev": "nodemon",
     "dev:nest": "nest start --watch",
     "dev:clean": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-clean.ps1",
     "start": "nest start",
+    "prestart:dev": "npx kill-port 4000 || echo Port 4000 was free",
     "start:dev": "nodemon",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
