feat: add cache invalidation endpoint and improve user cache management
- Introduced a new endpoint to invalidate the user's Redis cache, ensuring fresh data retrieval.
- Updated the `invalidateUserCache` method to return a success message upon completion.
- Enhanced the onboarding process to sync user data with the server after completion.
- Improved family space context to include a refresh method for better data consistency.
- Added dotenv support to load environment variables from the monorepo root for the web app.
- Updated dependencies in `pnpm-lock.yaml` to include `dotenv` for environment variable management.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
+    "dotenv": "^16.4.0",
     "framer-motion": "^10.17.9",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
