--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "predev": "npx kill-port 4173 || echo Port 4173 was free",
     "dev": "next dev -p 4173",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
+    "prestart": "npx kill-port 4173 || echo Port 4173 was free",
     "start": "next start -p 4173",
     "lint": "next lint"
   },
@@ -53,6 +55,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "kill-port": "^2.0.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
