--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,19 @@
 **/.env
 **/.env.*
 
-# Block your specific env/ folder and local settings
-env/
+# Allow ONLY safe templates (example files)
+!.env.example
+!.env.*.example
+!**/.env.example
+!**/.env.*.example
+
+# Block env/ folder actual values, allow examples
 env/*.env
+!env/*.env.example
+
+# Local settings
 settings.local.json
 .claude/settings.local.json
-
-# Allow ONLY safe templates
-!.env.example
-!env/*.env.example
 
 #####################################################################
 # 2. Project Folders & Files to Ignore
