--- a/apps/workers/package.json
+++ b/apps/workers/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "predev": "npx kill-port 4001 || echo Port 4001 was free",
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
@@ -24,6 +25,7 @@
     "twilio": "^5.0.0"
   },
   "devDependencies": {
+    "kill-port": "^2.0.1",
     "@types/node": "^20.11.0",
     "@types/nodemailer": "^6.4.0",
     "@types/web-push": "^3.6.0",
