feat: Implement admin dashboard features and user role management
- Added AdminModule to the application for admin dashboard functionality.
- Introduced systemRole property in AuthUserDto and User interface to manage user roles (USER, MODERATOR, ADMIN, SUPER_ADMIN).
- Updated JWT strategy to include systemRole in user authentication.
- Enhanced environment configuration with default admin credentials and JWT expiry settings for admin sessions.
- Updated database schema to support system roles and added a seed script for admin users.

--- a/env/base.env.example
+++ b/env/base.env.example
@@ -85,3 +85,13 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_STREAM_API_KEY=your-stream-api-key
 STREAM_API_SECRET=your-stream-api-secret
 
+# =============================================================================
+# ADMIN DASHBOARD [OPTIONAL]
+# =============================================================================
+# Default admin credentials (used by seed-admin.ts script)
+# Change these in production!
+ADMIN_EMAIL=superadmin@carecircle.com
+ADMIN_PASSWORD=SuperAdmin123!
+# Shorter JWT expiry for admin sessions (default: 1h)
+ADMIN_JWT_EXPIRES_IN=1h
+
