--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -11,7 +11,8 @@
     "studio": "prisma studio",
     "migrate": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "seed:admin": "ts-node prisma/seed-admin.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
